--- a/index.html
+++ b/index.html
@@ -3,53 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem Manajemen</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Login & Dashboard</title>
+    <!-- Menambahkan Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sistem Manajemen</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto" id="nav-links">
-                    <!-- Links akan dimuat oleh JavaScript -->
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-    <!-- Main Content -->
-    <div class="container mt-4" id="main-content">
-        <!-- Konten akan dimuat oleh JavaScript -->
+<!-- Halaman Login -->
+<div id="loginPage" class="container mt-5">
+    <h2 class="text-center">Login</h2>
+    <form id="loginForm">
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" required>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
+    </form>
+</div>
+
+<!-- Dashboard -->
+<div id="dashboardPage" class="container mt-5" style="display: none;">
+    <h2 class="text-center">Dashboard</h2>
+    <div class="d-flex justify-content-between mb-4">
+        <button class="btn btn-secondary" onclick="showPage('userPage')">User</button>
+        <button class="btn btn-secondary" onclick="showPage('pelangganPage')">Pelanggan</button>
+        <button class="btn btn-secondary" onclick="showPage('supplierPage')">Supplier</button>
+        <button class="btn btn-secondary" onclick="showPage('kategoriPage')">Kategori</button>
+        <button class="btn btn-secondary" onclick="showPage('itemPage')">Item</button>
+        <button class="btn btn-secondary" onclick="showPage('produkPage')">Produk</button>
+        <button class="btn btn-secondary" onclick="showPage('transaksiPage')">Transaksi</button>
+        <button class="btn btn-secondary" onclick="showPage('laporanPage')">Laporan</button>
+        <button class="btn btn-danger" onclick="logout()">Logout</button>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="modalForm" tabindex="-1" aria-labelledby="modalFormLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalFormLabel">Form</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="modal-form">
-                        <!-- Form fields akan dimuat oleh JavaScript -->
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
-                    <button type="submit" class="btn btn-primary" id="modal-save-btn">Simpan</button>
-                </div>
-            </div>
-        </div>
+    <!-- Dynamic Pages -->
+    <div id="userPage" class="page" style="display: none;">
+        <h3>User</h3>
+        <button class="btn btn-primary" onclick="addData('user')">Add User</button>
+        <table class="table table-striped mt-3" id="userTable"></table>
+    </div>
+    
+    <div id="pelangganPage" class="page" style="display: none;">
+        <h3>Pelanggan</h3>
+        <button class="btn btn-primary" onclick="addData('pelanggan')">Add Pelanggan</button>
+        <table class="table table-striped mt-3" id="pelangganTable"></table>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/scripts.js"></script>
+    <div id="supplierPage" class="page" style="display: none;">
+        <h3>Supplier</h3>
+        <button class="btn btn-primary" onclick="addData('supplier')">Add Supplier</button>
+        <table class="table table-striped mt-3" id="supplierTable"></table>
+    </div>
+
+    <div id="kategoriPage" class="page" style="display: none;">
+        <h3>Kategori</h3>
+        <button class="btn btn-primary" onclick="addData('kategori')">Add Kategori</button>
+        <table class="table table-striped mt-3" id="kategoriTable"></table>
+    </div>
+
+    <div id="itemPage" class="page" style="display: none;">
+        <h3>Item</h3>
+        <button class="btn btn-primary" onclick="addData('item')">Add Item</button>
+        <table class="table table-striped mt-3" id="itemTable"></table>
+    </div>
+
+    <div id="produkPage" class="page" style="display: none;">
+        <h3>Produk</h3>
+        <button class="btn btn-primary" onclick="addData('produk')">Add Produk</button>
+        <table class="table table-striped mt-3" id="produkTable"></table>
+    </div>
+
+    <div id="transaksiPage" class="page" style="display: none;">
+        <h3>Transaksi</h3>
+        <button class="btn btn-primary" onclick="addData('transaksi')">Add Transaksi</button>
+        <table class="table table-striped mt-3" id="transaksiTable"></table>
+    </div>
+
+    <div id="laporanPage" class="page" style="display: none;">
+        <h3>Laporan</h3>
+        <button class="btn btn-primary" onclick="generateReport()">Generate Laporan</button>
+        <table class="table table-striped mt-3" id="laporanTable"></table>
+    </div>
+</div>
+
+<!-- Menambahkan Bootstrap JS dan jQuery -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
