--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Aplikasi Manajemen User</title>
+    <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
-        <div class="card" style="width: 400px;">
+        <div class="card shadow" style="width: 400px;">
             <div class="card-body">
                 <h3 class="card-title text-center">Login</h3>
                 <form id="loginForm">
@@ -21,16 +21,14 @@
                         <input type="password" class="form-control" id="password" required>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button>
-                    <div class="mt-3 text-center">
-                        <a href="#" id="toRegister">Belum punya akun? Daftar di sini</a>
-                    </div>
                 </form>
+                <div class="mt-3 text-center">
+                    <a href="register.html">Belum punya akun? Daftar di sini</a>
+                </div>
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
