--- a/dashboardSupAdm.html
+++ b/dashboardSupAdm.html
@@ -4,156 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Super Admin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
+    <script src="scripts/dashboard.js" defer></script>
+    <script src="scripts/chart.js" defer></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Super Admin</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#userManagement">Manajemen User</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#customers">Pelanggan</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#suppliers">Supplier</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#categories">Kategori</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#items">Item</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#products">Produk</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#transactions">Transaksi</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#reports">Laporan</a></li>
-                    </ul>
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#" id="logout">Logout</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <div class="container mt-4">
-            <h3>Selamat datang, <span id="userName"></span></h3>
-            <p>Peran: <span id="userRole"></span></p>
-
-            <!-- Section: User Management -->
-            <div id="userManagement">
-                <h4>Manajemen User</h4>
-                <button class="btn btn-primary mb-3" onclick="openUserForm()">Tambah User</button>
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nama</th>
-                            <th>Email</th>
-                            <th>Peran</th>
-                            <th>Aksi</th>
-                        </tr>
-                    </thead>
-                    <tbody id="userTable"></tbody>
-                </table>
-            </div>
-
-            <!-- Section: Pelanggan -->
-            <div id="customers">
-                <h4>Manajemen Pelanggan</h4>
-                <button class="btn btn-primary mb-3" onclick="openCustomerForm()">Tambah Pelanggan</button>
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nama</th>
-                            <th>Email</th>
-                            <th>No. Telepon</th>
-                            <th>Aksi</th>
-                        </tr>
-                    </thead>
-                    <tbody id="customerTable"></tbody>
-                </table>
-            </div>
-
-            <!-- Section: Supplier -->
-            <div id="suppliers">
-                <h4>Manajemen Supplier</h4>
-                <button class="btn btn-primary mb-3" onclick="openSupplierForm()">Tambah Supplier</button>
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nama</th>
-                            <th>Kontak</th>
-                            <th>Alamat</th>
-                            <th>Aksi</th>
-                        </tr>
-                    </thead>
-                    <tbody id="supplierTable"></tbody>
-                </table>
-            </div>
-
-            <!-- Repeat similar sections for Categories, Items, Products, Transactions, and Reports -->
+        <a class="navbar-brand" href="#">Super Admin</a>
+        <button class="btn btn-danger" onclick="logout()">Logout</button>
+    </div>
+</nav>
 <div class="container mt-4">
-    <h3>Dashboard Super Admin</h3>
-    <div class="row my-4">
-        <!-- Tombol Fitur -->
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-primary w-100" onclick="navigateTo('userManagement')">
-                <i class="bi bi-person-circle"></i> User
+    <h3>Dashboard</h3>
+    <div class="row">
+        <div class="col-md-3">
+            <button class="btn btn-primary w-100" onclick="navigateTo('manajemenUser')">
+                <i class="bi bi-person-circle"></i> Manajemen User
             </button>
         </div>
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-success w-100" onclick="navigateTo('customerManagement')">
+        <div class="col-md-3">
+            <button class="btn btn-success w-100">
                 <i class="bi bi-people-fill"></i> Pelanggan
             </button>
         </div>
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-warning w-100" onclick="navigateTo('supplierManagement')">
-                <i class="bi bi-truck"></i> Supplier
-            </button>
-        </div>
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-info w-100" onclick="navigateTo('categoryManagement')">
-                <i class="bi bi-tags"></i> Kategori
-            </button>
-        </div>
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-secondary w-100" onclick="navigateTo('itemManagement')">
-                <i class="bi bi-box"></i> Item
-            </button>
-        </div>
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-dark w-100" onclick="navigateTo('productManagement')">
-                <i class="bi bi-box-seam"></i> Produk
-            </button>
-        </div>
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-danger w-100" onclick="navigateTo('transactionManagement')">
-                <i class="bi bi-cash"></i> Transaksi
-            </button>
-        </div>
-        <div class="col-md-3 mb-3">
-            <button class="btn btn-primary w-100" onclick="navigateTo('reportManagement')">
-                <i class="bi bi-graph-up"></i> Laporan
-            </button>
-        </div>
+        <!-- Tambahkan tombol lainnya di sini -->
     </div>
-
-    <!-- Chart Section -->
-    <div class="row">
-        <div class="col-md-12">
-            <h4>Statistik</h4>
-            <canvas id="dashboardChart" height="100"></canvas>
-        </div>
+    <div class="mt-4">
+        <h4>Statistik</h4>
+        <canvas id="dashboardChart"></canvas>
     </div>
 </div>
-
-
-
-            
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
-    <script src="peran.js"></script>
 </body>
 </html>
