--- a/dashboardSupAdm.html
+++ b/dashboardSupAdm.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Super Admin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
-    <script src="scripts/dashboard.js" defer></script>
-    <script src="scripts/chart.js" defer></script>
+    <title>Dashboard</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Super Admin</a>
-        <button class="btn btn-danger" onclick="logout()">Logout</button>
-    </div>
-</nav>
-<div class="container mt-4">
-    <h3>Dashboard</h3>
-    <div class="row">
-        <div class="col-md-3">
-            <button class="btn btn-primary w-100" onclick="navigateTo('manajemenUser')">
-                <i class="bi bi-person-circle"></i> Manajemen User
-            </button>
+        <div class="row">
+            <!-- Sidebar -->
+            <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" id="sidebarMenu">
+                <div class="position-sticky">
+                    <ul class="nav flex-column" id="menuItems">
+                        <!-- Dinamis berdasarkan peran -->
+                    </ul>
+                </div>
+            </nav>
+
+            <!-- Main Content -->
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div id="content">
+                    <h1 class="text-center mt-5">Selamat Datang di Dashboard</h1>
+                    <p class="text-center">Silakan pilih menu di sidebar untuk memulai.</p>
+                </div>
+            </main>
         </div>
-        <div class="col-md-3">
-            <button class="btn btn-success w-100">
-                <i class="bi bi-people-fill"></i> Pelanggan
-            </button>
-        </div>
-        <!-- Tambahkan tombol lainnya di sini -->
     </div>
-    <div class="mt-4">
-        <h4>Statistik</h4>
-        <canvas id="dashboardChart"></canvas>
-    </div>
-</div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
