--- a/dashboardSupAdm.html
+++ b/dashboardSupAdm.html
@@ -13,9 +13,7 @@
             <!-- Sidebar -->
             <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" id="sidebarMenu">
                 <div class="position-sticky">
-                    <ul class="nav flex-column" id="menuItems">
-                        <!-- Dinamis berdasarkan peran -->
-                    </ul>
+                    <ul class="nav flex-column" id="menuItems"></ul>
                 </div>
             </nav>
 
