--- a/pelanggan.html
+++ b/pelanggan.html
@@ -1,57 +1,27 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manajemen Pelanggan</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<div class="container mt-5">
-    <h2 class="text-center">Manajemen Pelanggan</h2>
-
-    <!-- Form Tambah/Edit Pelanggan -->
+<div class="container mt-3">
+    <h2>Manajemen Pelanggan</h2>
     <form id="customerForm">
         <div class="mb-3">
             <label for="customerName" class="form-label">Nama Pelanggan</label>
-            <input type="text" class="form-control" id="customerName" placeholder="Masukkan nama pelanggan" required>
+            <input type="text" class="form-control" id="customerName" placeholder="Masukkan nama pelanggan">
         </div>
         <div class="mb-3">
             <label for="customerPhone" class="form-label">No Handphone</label>
-            <input type="text" class="form-control" id="customerPhone" placeholder="Masukkan no handphone" required>
+            <input type="text" class="form-control" id="customerPhone" placeholder="Masukkan no handphone">
         </div>
-        <div class="mb-3">
-            <label for="customerEmail" class="form-label">Email</label>
-            <input type="email" class="form-control" id="customerEmail" placeholder="Masukkan email pelanggan" required>
-        </div>
-        <div class="mb-3">
-            <label for="customerAddress" class="form-label">Alamat</label>
-            <textarea class="form-control" id="customerAddress" placeholder="Masukkan alamat pelanggan" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Simpan</button>
+        <button type="submit" class="btn btn-primary">Simpan</button>
     </form>
-
-    <!-- Daftar Pelanggan -->
-    <h3 class="mt-5">Daftar Pelanggan</h3>
-    <table class="table table-striped mt-3">
+    <hr>
+    <h3>Daftar Pelanggan</h3>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>ID</th>
             <th>Nama</th>
             <th>No Handphone</th>
-            <th>Email</th>
-            <th>Alamat</th>
             <th>Aksi</th>
         </tr>
         </thead>
-        <tbody id="customerTable">
-        </tbody>
+        <tbody id="customerTable"></tbody>
     </table>
 </div>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/pelanggan.js"></script>
-</body>
-</html>
