--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome CDN -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .sidebar { height: 100vh; background-color: #f8f9fa; }
+        .sidebar a { padding: 10px; display: block; color: #333; text-decoration: none; }
+        .sidebar a.active, .sidebar a:hover { background-color: #007bff; color: #fff; }
+        .content { margin-left: 250px; padding: 20px; }
+    </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <!-- Sidebar -->
-            <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" id="sidebarMenu">
-                <div class="position-sticky">
-                    <ul class="nav flex-column" id="menuItems"></ul>
-                </div>
-            </nav>
+    <div class="d-flex">
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <h4 class="text-center py-3">Dashboard</h4>
+            <a href="#" id="menu-user" class="menu-item"><i class="fa fa-users"></i> User</a>
+            <a href="#" id="menu-pelanggan" class="menu-item"><i class="fa fa-user"></i> Pelanggan</a>
+            <a href="#" id="menu-supplier" class="menu-item"><i class="fa fa-truck"></i> Supplier</a>
+            <a href="#" id="menu-kategori" class="menu-item"><i class="fa fa-list"></i> Kategori</a>
+            <a href="#" id="menu-item" class="menu-item"><i class="fa fa-box"></i> Item</a>
+            <a href="#" id="menu-produk" class="menu-item"><i class="fa fa-cube"></i> Produk</a>
+            <a href="#" id="menu-transaksi" class="menu-item"><i class="fa fa-shopping-cart"></i> Transaksi</a>
+            <a href="#" id="menu-laporan" class="menu-item"><i class="fa fa-file"></i> Laporan</a>
+            <a href="#" id="logout" class="menu-item text-danger"><i class="fa fa-sign-out-alt"></i> Logout</a>
+        </div>
 
-            <!-- Main Content -->
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div id="content">
-                    <h1 class="text-center mt-5">Selamat Datang di Dashboard</h1>
-                    <p class="text-center">Silakan pilih menu di sidebar untuk memulai.</p>
-                </div>
-            </main>
+        <!-- Content Area -->
+        <div class="content">
+            <div id="main-content"></div>
         </div>
     </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="js/dashboard.js"></script>
 </body>
 </html>
