--- a/index.html
+++ b/index.html
@@ -43,15 +43,7 @@
         <div class="sidebar p-3">
             <h4 class="text-center">Admin Panel</h4>
             <hr>
-            <a href="#" class="active" id="linkUser"><i class="fa fa-users"></i> User</a>
-            <a href="#" id="linkPelanggan"><i class="fa fa-user"></i> Pelanggan</a>
-            <a href="#" id="linkSupplier"><i class="fa fa-truck"></i> Supplier</a>
-            <a href="#" id="linkKategori"><i class="fa fa-list"></i> Kategori</a>
-            <a href="#" id="linkItem"><i class="fa fa-box"></i> Item</a>
-            <a href="#" id="linkProduk"><i class="fa fa-cube"></i> Produk</a>
-            <a href="#" id="linkTransaksi"><i class="fa fa-shopping-cart"></i> Transaksi</a>
-            <a href="#" id="linkLaporan"><i class="fa fa-file"></i> Laporan</a>
-            <a href="#" id="linkSetting"><i class="fa fa-cogs"></i> Setting</a>
+            <div id="menuContainer"></div>
         </div>
 
         <!-- Content -->
@@ -104,14 +96,6 @@
             <div class="card mb-3">
                 <div class="card-body">
                     <canvas id="dashboardChart"></canvas>
-                </div>
-            </div>
-
-            <!-- Color Picker -->
-            <div class="card">
-                <div class="card-body">
-                    <label for="colorPicker" class="form-label">Ubah Warna Sidebar</label>
-                    <input type="color" id="colorPicker" class="form-control" value="#343a40">
                 </div>
             </div>
         </div>
